<resources>
    <string name="app_name">GeekbrainsHomeworkFromLesson6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">favourite</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>

    <string name="shopping_list_note">Shopping list</string>
    <string name="shopping_list_detail">milk, bread, eggs</string>

    <string name="travel_note">Travel</string>
    <string name="travel_detail">hotel booking, make a vise, exchange money</string>

    <string name="todo_note">Todo</string>
    <string name="todo_detail">fix the bike, vaccinate a cat</string>

    <string name="note_note">note</string>
    <string name="note_detail">detail</string>
    <string name="update">update</string>
    <string name="Attention">Attention!</string>
    <string name="MessageClearAll">Delete all notes?</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="DeleteNote">Delete note?</string>

</resources>