<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="10"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="20"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="20"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="15"
        android:title="@string/edit"
        app:showAsAction="never" />
</menu>